--- a/2DPlatformerEngine/2DPlatformerEngine.vcxproj.filters
+++ b/2DPlatformerEngine/2DPlatformerEngine.vcxproj.filters
@@ -42,7 +42,13 @@
     <ClCompile Include="Engine\Events\EventsHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Objects\Camera2D.cpp">
+    <ClCompile Include="Engine\Objects\Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Physics\Box.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Entities\TestPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -80,7 +86,16 @@
     <ClInclude Include="Engine\Events\EventsHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Objects\Camera2D.h">
+    <ClInclude Include="Engine\Objects\Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Objects\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Physics\Box.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Entities\TestPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
