--- a/2DPlatformerEngine/2DPlatformerEngine.vcxproj.filters
+++ b/2DPlatformerEngine/2DPlatformerEngine.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Game\Entities\TestPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Physics\LayerMask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Engine.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\Entities\TestPlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Physics\LayerMask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
